--- a/PitchPerfect/Base.lproj/Main.storyboard
+++ b/PitchPerfect/Base.lproj/Main.storyboard
@@ -3,6 +3,7 @@
     <dependencies>
         <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="9530"/>
+        <capability name="Constraints to layout margins" minToolsVersion="6.0"/>
     </dependencies>
     <scenes>
         <!--Record-->
@@ -32,7 +33,7 @@
                             </label>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="XYq-b5-tex">
                                 <rect key="frame" x="275" y="402" width="50" height="50"/>
-                                <state key="normal" image="stop"/>
+                                <state key="normal" image="stopButton"/>
                                 <connections>
                                     <action selector="stopRecording:" destination="BYZ-38-t0r" eventType="touchUpInside" id="hWU-bw-wQo"/>
                                     <segue destination="X6e-tZ-AvQ" kind="show" id="waR-Tp-YGW"/>
@@ -60,10 +61,10 @@
             </objects>
             <point key="canvasLocation" x="934" y="429"/>
         </scene>
-        <!--View Controller-->
+        <!--Play Sounds View Controller-->
         <scene sceneID="fN2-GT-xR3">
             <objects>
-                <viewController id="X6e-tZ-AvQ" sceneMemberID="viewController">
+                <viewController id="X6e-tZ-AvQ" customClass="PlaySoundsViewController" customModule="PitchPerfect" customModuleProvider="target" sceneMemberID="viewController">
                     <layoutGuides>
                         <viewControllerLayoutGuide type="top" id="iwN-zG-a7q"/>
                         <viewControllerLayoutGuide type="bottom" id="HF3-bk-1iT"/>
@@ -71,7 +72,38 @@
                     <view key="view" contentMode="scaleToFill" id="fr6-is-hy1">
                         <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="q8H-7f-RhY">
+                                <rect key="frame" x="50" y="114" width="100" height="100"/>
+                                <state key="normal" image="slowButton"/>
+                                <connections>
+                                    <action selector="playSlowAudio:" destination="X6e-tZ-AvQ" eventType="touchUpInside" id="t7a-Ya-6Ww"/>
+                                </connections>
+                            </button>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="dYK-H1-J6M">
+                                <rect key="frame" x="450" y="114" width="100" height="100"/>
+                                <state key="normal" image="fastButton"/>
+                                <connections>
+                                    <action selector="playFastAudio:" destination="X6e-tZ-AvQ" eventType="touchUpInside" id="hxw-yk-c5A"/>
+                                </connections>
+                            </button>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="J87-Cg-rv5">
+                                <rect key="frame" x="275" y="500" width="50" height="50"/>
+                                <state key="normal" image="stopButton"/>
+                                <connections>
+                                    <action selector="stopAudio:" destination="X6e-tZ-AvQ" eventType="touchUpInside" id="bjI-9O-KQ7"/>
+                                </connections>
+                            </button>
+                        </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                        <constraints>
+                            <constraint firstItem="HF3-bk-1iT" firstAttribute="top" secondItem="J87-Cg-rv5" secondAttribute="bottom" constant="50" id="9Xj-VZ-9aU"/>
+                            <constraint firstAttribute="trailingMargin" secondItem="dYK-H1-J6M" secondAttribute="trailing" constant="30" id="Fq2-IL-wWu"/>
+                            <constraint firstItem="q8H-7f-RhY" firstAttribute="leading" secondItem="fr6-is-hy1" secondAttribute="leadingMargin" constant="30" id="Hww-J3-HUy"/>
+                            <constraint firstItem="q8H-7f-RhY" firstAttribute="top" secondItem="iwN-zG-a7q" secondAttribute="bottom" constant="50" id="TN4-BG-b3L"/>
+                            <constraint firstItem="J87-Cg-rv5" firstAttribute="centerX" secondItem="fr6-is-hy1" secondAttribute="centerX" id="sEV-ox-Ct9"/>
+                            <constraint firstItem="dYK-H1-J6M" firstAttribute="top" secondItem="iwN-zG-a7q" secondAttribute="bottom" constant="50" id="ufG-g7-j8x"/>
+                        </constraints>
                     </view>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="HjA-ZY-J6H" userLabel="First Responder" sceneMemberID="firstResponder"/>
@@ -98,7 +130,9 @@
         </scene>
     </scenes>
     <resources>
+        <image name="fastButton" width="100" height="100"/>
         <image name="microphone" width="100" height="100"/>
-        <image name="stop" width="50" height="50"/>
+        <image name="slowButton" width="100" height="100"/>
+        <image name="stopButton" width="50" height="50"/>
     </resources>
 </document>
