--- a/PitchPerfect/Base.lproj/Main.storyboard
+++ b/PitchPerfect/Base.lproj/Main.storyboard
@@ -101,6 +101,13 @@
                                     <action selector="playChipmunkAudio:" destination="X6e-tZ-AvQ" eventType="touchUpInside" id="aCj-vZ-hVQ"/>
                                 </connections>
                             </button>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="lmJ-4H-25n">
+                                <rect key="frame" x="450" y="264" width="100" height="100"/>
+                                <state key="normal" image="darthVaderButton"/>
+                                <connections>
+                                    <action selector="playDarthvaderAudio:" destination="X6e-tZ-AvQ" eventType="touchUpInside" id="shD-ZD-yRh"/>
+                                </connections>
+                            </button>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                         <constraints>
@@ -110,7 +117,9 @@
                             <constraint firstItem="q8H-7f-RhY" firstAttribute="top" secondItem="iwN-zG-a7q" secondAttribute="bottom" constant="50" id="TN4-BG-b3L"/>
                             <constraint firstItem="hIB-3I-kuo" firstAttribute="leading" secondItem="fr6-is-hy1" secondAttribute="leadingMargin" constant="30" id="ldj-Cq-Tjh"/>
                             <constraint firstItem="hIB-3I-kuo" firstAttribute="top" secondItem="q8H-7f-RhY" secondAttribute="bottom" constant="50" id="moz-uG-rgU"/>
+                            <constraint firstAttribute="trailingMargin" secondItem="lmJ-4H-25n" secondAttribute="trailing" constant="30" id="msp-yh-BcO"/>
                             <constraint firstItem="J87-Cg-rv5" firstAttribute="centerX" secondItem="fr6-is-hy1" secondAttribute="centerX" id="sEV-ox-Ct9"/>
+                            <constraint firstItem="lmJ-4H-25n" firstAttribute="top" secondItem="dYK-H1-J6M" secondAttribute="bottom" constant="50" id="t8U-Cz-zxC"/>
                             <constraint firstItem="dYK-H1-J6M" firstAttribute="top" secondItem="iwN-zG-a7q" secondAttribute="bottom" constant="50" id="ufG-g7-j8x"/>
                         </constraints>
                     </view>
@@ -140,6 +149,7 @@
     </scenes>
     <resources>
         <image name="chipmunkButton" width="100" height="100"/>
+        <image name="darthVaderButton" width="100" height="100"/>
         <image name="fastButton" width="100" height="100"/>
         <image name="microphone" width="100" height="100"/>
         <image name="slowButton" width="100" height="100"/>
