--- a/PitchPerfect/Base.lproj/Main.storyboard
+++ b/PitchPerfect/Base.lproj/Main.storyboard
@@ -73,54 +73,68 @@
                         <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="q8H-7f-RhY">
-                                <rect key="frame" x="50" y="114" width="100" height="100"/>
-                                <state key="normal" image="slowButton"/>
-                                <connections>
-                                    <action selector="playSlowAudio:" destination="X6e-tZ-AvQ" eventType="touchUpInside" id="t7a-Ya-6Ww"/>
-                                </connections>
-                            </button>
-                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="dYK-H1-J6M">
-                                <rect key="frame" x="450" y="114" width="100" height="100"/>
-                                <state key="normal" image="fastButton"/>
-                                <connections>
-                                    <action selector="playFastAudio:" destination="X6e-tZ-AvQ" eventType="touchUpInside" id="hxw-yk-c5A"/>
-                                </connections>
-                            </button>
-                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="J87-Cg-rv5">
-                                <rect key="frame" x="275" y="500" width="50" height="50"/>
-                                <state key="normal" image="stopButton"/>
-                                <connections>
-                                    <action selector="stopAudio:" destination="X6e-tZ-AvQ" eventType="touchUpInside" id="bjI-9O-KQ7"/>
-                                </connections>
-                            </button>
-                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="hIB-3I-kuo">
-                                <rect key="frame" x="50" y="264" width="100" height="100"/>
-                                <state key="normal" image="chipmunkButton"/>
-                                <connections>
-                                    <action selector="playChipmunkAudio:" destination="X6e-tZ-AvQ" eventType="touchUpInside" id="aCj-vZ-hVQ"/>
-                                </connections>
-                            </button>
-                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="lmJ-4H-25n">
-                                <rect key="frame" x="450" y="264" width="100" height="100"/>
-                                <state key="normal" image="darthVaderButton"/>
-                                <connections>
-                                    <action selector="playDarthvaderAudio:" destination="X6e-tZ-AvQ" eventType="touchUpInside" id="shD-ZD-yRh"/>
-                                </connections>
-                            </button>
+                            <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" distribution="fillEqually" translatesAutoresizingMaskIntoConstraints="NO" id="zk8-7O-Ufi">
+                                <rect key="frame" x="20" y="64" width="560" height="536"/>
+                                <subviews>
+                                    <stackView opaque="NO" contentMode="scaleToFill" distribution="fillEqually" translatesAutoresizingMaskIntoConstraints="NO" id="Qty-FX-r7o">
+                                        <rect key="frame" x="0.0" y="0.0" width="560" height="179"/>
+                                        <subviews>
+                                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="q8H-7f-RhY" userLabel="snailButton">
+                                                <rect key="frame" x="0.0" y="0.0" width="280" height="179"/>
+                                                <state key="normal" image="slowButton"/>
+                                                <connections>
+                                                    <action selector="playSlowAudio:" destination="X6e-tZ-AvQ" eventType="touchUpInside" id="t7a-Ya-6Ww"/>
+                                                </connections>
+                                            </button>
+                                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="dYK-H1-J6M" userLabel="rabbitButton">
+                                                <rect key="frame" x="280" y="0.0" width="280" height="179"/>
+                                                <state key="normal" image="fastButton"/>
+                                                <connections>
+                                                    <action selector="playFastAudio:" destination="X6e-tZ-AvQ" eventType="touchUpInside" id="hxw-yk-c5A"/>
+                                                </connections>
+                                            </button>
+                                        </subviews>
+                                    </stackView>
+                                    <stackView opaque="NO" contentMode="scaleToFill" distribution="fillEqually" translatesAutoresizingMaskIntoConstraints="NO" id="6ha-Q4-NQV">
+                                        <rect key="frame" x="0.0" y="179" width="560" height="179"/>
+                                        <subviews>
+                                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="hIB-3I-kuo" userLabel="chipmunkButton">
+                                                <rect key="frame" x="0.0" y="0.0" width="280" height="179"/>
+                                                <state key="normal" image="chipmunkButton"/>
+                                                <connections>
+                                                    <action selector="playChipmunkAudio:" destination="X6e-tZ-AvQ" eventType="touchUpInside" id="aCj-vZ-hVQ"/>
+                                                </connections>
+                                            </button>
+                                            <button opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="249" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="lmJ-4H-25n" userLabel="darthvaderButton">
+                                                <rect key="frame" x="280" y="0.0" width="280" height="179"/>
+                                                <state key="normal" image="darthVaderButton"/>
+                                                <connections>
+                                                    <action selector="playDarthvaderAudio:" destination="X6e-tZ-AvQ" eventType="touchUpInside" id="shD-ZD-yRh"/>
+                                                </connections>
+                                            </button>
+                                        </subviews>
+                                    </stackView>
+                                    <stackView opaque="NO" contentMode="scaleToFill" distribution="fillEqually" translatesAutoresizingMaskIntoConstraints="NO" id="Jsn-9M-npp">
+                                        <rect key="frame" x="0.0" y="358" width="560" height="179"/>
+                                        <subviews>
+                                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="J87-Cg-rv5" userLabel="stopButton">
+                                                <rect key="frame" x="0.0" y="0.0" width="560" height="179"/>
+                                                <state key="normal" image="stopButton"/>
+                                                <connections>
+                                                    <action selector="stopAudio:" destination="X6e-tZ-AvQ" eventType="touchUpInside" id="bjI-9O-KQ7"/>
+                                                </connections>
+                                            </button>
+                                        </subviews>
+                                    </stackView>
+                                </subviews>
+                            </stackView>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                         <constraints>
-                            <constraint firstItem="HF3-bk-1iT" firstAttribute="top" secondItem="J87-Cg-rv5" secondAttribute="bottom" constant="50" id="9Xj-VZ-9aU"/>
-                            <constraint firstAttribute="trailingMargin" secondItem="dYK-H1-J6M" secondAttribute="trailing" constant="30" id="Fq2-IL-wWu"/>
-                            <constraint firstItem="q8H-7f-RhY" firstAttribute="leading" secondItem="fr6-is-hy1" secondAttribute="leadingMargin" constant="30" id="Hww-J3-HUy"/>
-                            <constraint firstItem="q8H-7f-RhY" firstAttribute="top" secondItem="iwN-zG-a7q" secondAttribute="bottom" constant="50" id="TN4-BG-b3L"/>
-                            <constraint firstItem="hIB-3I-kuo" firstAttribute="leading" secondItem="fr6-is-hy1" secondAttribute="leadingMargin" constant="30" id="ldj-Cq-Tjh"/>
-                            <constraint firstItem="hIB-3I-kuo" firstAttribute="top" secondItem="q8H-7f-RhY" secondAttribute="bottom" constant="50" id="moz-uG-rgU"/>
-                            <constraint firstAttribute="trailingMargin" secondItem="lmJ-4H-25n" secondAttribute="trailing" constant="30" id="msp-yh-BcO"/>
-                            <constraint firstItem="J87-Cg-rv5" firstAttribute="centerX" secondItem="fr6-is-hy1" secondAttribute="centerX" id="sEV-ox-Ct9"/>
-                            <constraint firstItem="lmJ-4H-25n" firstAttribute="top" secondItem="dYK-H1-J6M" secondAttribute="bottom" constant="50" id="t8U-Cz-zxC"/>
-                            <constraint firstItem="dYK-H1-J6M" firstAttribute="top" secondItem="iwN-zG-a7q" secondAttribute="bottom" constant="50" id="ufG-g7-j8x"/>
+                            <constraint firstAttribute="trailingMargin" secondItem="zk8-7O-Ufi" secondAttribute="trailing" id="2dj-e0-jBR"/>
+                            <constraint firstItem="zk8-7O-Ufi" firstAttribute="leading" secondItem="fr6-is-hy1" secondAttribute="leadingMargin" id="KdA-yG-UOk"/>
+                            <constraint firstItem="HF3-bk-1iT" firstAttribute="top" secondItem="zk8-7O-Ufi" secondAttribute="bottom" id="ZWX-gc-R1O"/>
+                            <constraint firstItem="zk8-7O-Ufi" firstAttribute="top" secondItem="iwN-zG-a7q" secondAttribute="bottom" id="y2h-aw-tcr"/>
                         </constraints>
                     </view>
                 </viewController>
